@@ -106,6 +106,9 @@ Build
 Tests
 -----
 
+- Issue #10736: Fix test_ttk test_widgets failures with Cocoa Tk 8.5.9
+  on Mac OS X.  (Patch by Ronald Oussoren)
+
 - Issue #12057: Add tests for ISO 2022 codecs (iso2022_jp, iso2022_jp_2,
   iso2022_kr).
 
